# pos_system

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  docker-compose.yml
backend/: CMakeLists.txt  Dockerfile
backend/include/pos/: config.hpp  database.hpp  http_utils.hpp  rate_limiter.hpp  security.hpp
backend/src/: config.cpp  database.cpp  http_utils.cpp  main.cpp  rate_limiter.cpp  security.cpp
docker/postgres/init/: 001_schema.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/pages/: AdminPage.tsx  LoginPage.tsx  PosPage.tsx
